--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "native-base": "^2.13.4",
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
-    "react-native": "0.60.4"
+    "react-native": "^0.60.4",
+    "react-native-animatable": "^1.3.2",
+    "react-native-color-picker": "^0.4.1",
+    "react-native-easy-toast": "^1.2.0",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "^1.1.0",
+    "react-native-router-flux": "^4.0.6",
+    "react-native-splash-screen": "^3.2.0",
+    "react-navigation": "^3.11.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.0.5",
+    "tinycolor2": "^1.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
